[gd_scene load_steps=10 format=1]

[ext_resource path="res://scripts/levelSelect.gd" type="Script" id=1]
[ext_resource path="res://assets/world1_background1.png" type="Texture" id=2]
[ext_resource path="res://assets/world1_background2.png" type="Texture" id=3]
[ext_resource path="res://assets/world1_background3.png" type="Texture" id=4]
[ext_resource path="res://assets/world1_background4.png" type="Texture" id=5]
[ext_resource path="res://scenes/Level.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/market_back1.png" type="Texture" id=7]
[ext_resource path="res://assets/market_back2.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[node name="levelSelect" type="Node"]

script/script = ExtResource( 1 )

[node name="backGround" type="AnimatedSprite" parent="."]

z/z = -1
frames = SubResource( 1 )
animation = "default"
playing = true
centered = false

[node name="levels" type="Node" parent="."]

[node name="Level" parent="levels" instance=ExtResource( 6 )]

transform/pos = Vector2( 311.575, 311.27 )
level = 1

[node name="Level 2" parent="levels" instance=ExtResource( 6 )]

transform/pos = Vector2( 543.668, 626.046 )
level = 2

[node name="Level 3" parent="levels" instance=ExtResource( 6 )]

transform/pos = Vector2( 783.726, 310.71 )
level = 3

[node name="Level 4" parent="levels" instance=ExtResource( 6 )]

transform/pos = Vector2( 1049.06, 607.785 )
level = 4

[node name="Level 5" parent="levels" instance=ExtResource( 6 )]

transform/pos = Vector2( 1192.19, 427.506 )
level = 5

[node name="BackButton" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 35.0
margin/right = 168.0
margin/bottom = 107.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 8 )
params/resize_mode = 0
params/stretch_mode = 0

[connection signal="input_event" from="levels/Level" to="." method="_on_Level_input_event"]

[connection signal="input_event" from="levels/Level 2" to="." method="_on_Level_2_input_event"]

[connection signal="input_event" from="levels/Level 3" to="." method="_on_Level_3_input_event"]

[connection signal="input_event" from="levels/Level 4" to="." method="_on_Level_4_input_event"]

[connection signal="input_event" from="levels/Level 5" to="." method="_on_Level_5_input_event"]

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]


